# cos-comparison

./: History.txt  LICENSE  LICENSE.txt  README.md  pyproject.toml  setup.py
cos-comparison/brain_layer/logic/: __init__.py  probability_logic.py
cos-comparison/core/: .gitkeep  __init__.py  config.json  cos_comparison.py
cos-comparison/cos_comparison_c/: .gitkeep  __init__.py
cos-comparison/cos_comparison_c/include/: .gitkeep  core.c  type.h  type_data.h  type_vector.h
cos-comparison/include/: .gitkeep  core.h  cos_comparison_pydll.c  type_data.h  type_default_contain.h  type_func_name_space.h  type_vector.h
cos-comparison/interface/: __init__.py  system_api.py
cos-comparison/sense_layer/: __init__.py  receptor.py
cos-comparison/test_tool/: debugger.py
cos_comparison/: __init__.py
cos_comparison/brain_layer/: __init__.py
cos_comparison/brain_layer/logic/: __init__.py  probability_logic.py  symbol_logic.py
cos_comparison/brain_layer/reflex/: __init__.py  reflex.py
cos_comparison/core/: __init__.py  config.json  cos_comparison.py
cos_comparison/core/cos_comparison_c/: __init__.py
cos_comparison/core/cos_comparison_c/include/: core.c
cos_comparison/core/include/: core.h  cos_comparison_pydll.c  type.h  type_vector.h
cos_comparison/generate_layer/: __init__.py  basedata.py
cos_comparison/interface/: __init__.py  call_api.py  system_api.py
cos_comparison/sense_layer/: __init__.py  receptor.py
cos_comparison/test_tool/: __init__.py  debugger.py
docs/: README.md  getting-started.md
docs/api/: README.md  active-mode.md  core.md  passive-mode.md  statistics.md
docs/architecture/: README.md  backend-system.md  seven-layer.md
docs/principles/: README.md  dual-mode.md  first-principle.md  similarity-measures.md
tests/: test_image_gui.pyw
